--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Degrees of separation web</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div id="app">
+    </div>
+    <canvas id="canvas"></canvas>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
