--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
     </div>
     <canvas id="canvas"></canvas>
+    <div id="notification"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
