--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </div>
     <canvas id="canvas"></canvas>
     <div id="notification"></div>
+    <select id="dropdown"></select>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
