--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./src/style.css" />
+    <meta property="og:title" content="Degrees of separation web">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Degrees of separation web</title>
   </head>
