The diagram can now highlight the connection between two individuals

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     </div>
     <canvas id="canvas"></canvas>
     <select id="dropdown"></select>
+    <div id="find-shortest-path-div">
+      <div>
+        Find shortest path between...
+        <div style="display:flex; justify-content:space-between; position:relative; margin-top:0.5em">
+          <select id="personA"></select>
+          <select id="personB"></select>
+        </div>
+      </div>
+      <div>
+        <div style="height:25%"></div>
+        <div id="shortest-path-answer-text"></div>
+      </div>
+    </div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
