Restore non-d3 view

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Degrees of separation web</title>
   </head>
   <body>
-    <div id="svg-holder"></div>
     <div id="app">
     </div>
+    <canvas id="canvas"></canvas>
     <select id="dropdown"></select>
     <div id="find-shortest-path-div">
       <div>
